--- a/SAP.WebApi/appsettings.json
+++ b/SAP.WebApi/appsettings.json
@@ -6,6 +6,17 @@
     }
   },
 
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    }
+  },
+
+
   "SapConnection": {
     "BaseUrl": "https://su15-04.sb1.cloud/ServiceLayer/b1s/v2/"
   },
